loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:2: error: not found: value trouverSortie
while (trouverSortie==false){
       ^