loopdowhile.Poucet2.scala.code
var n=0
while (trouverSortie==false){
  do {
    avance()
    if (estSurBiscuit==true){
      n=n+1
    }
  }while(crossing()==false)
  if (n>=3){
    gauche()
  }
  else{
    droite()
  }
  
}